Fix Checkbox and Radio icon alignment. AGAIN.

--- a/addon/styles/components/radio.scss
+++ b/addon/styles/components/radio.scss
@@ -44,7 +44,9 @@
     } //! input[type="radio"]
 
     .overlay {
-      display: block;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       position: absolute;
       top: 0;
       left: 0;
